# mcqmaker

./: .coverage  .gitignore  Convertisseur2.py  FUNDING.yml  Instructions_for_OneDrive_sync.md  LICENSE  MCQMaker.kv  MCQMaker.py  MCQMaker.spec  NOTICE  QCMMaker.kv  QCMMaker.py  QCMMakerV3.5.1.py  QCMMakerV3.7.0.py  README.md  Test_docx.docx  auto_update.py  brut.txt  compilation.spec  compile_for_Linux.sh  compile_for_MacOS.sh  compile_for_MacOS_v2.sh  compile_for_Windows.sh  coverage.xml  draft.md  entree copy.txt  entree.txt  export_Test_exp.txt  linux.spec  main.kv  main.py  mode_emploi.md  pylint.toml  pyproject.toml  pytest.ini  reponses_Test.txt  requirements-dev.txt  requirements.txt  sortie.txt  test.docx  (+3 more)
Classes/: ATS.txt  Aucune.txt  LUPA.txt  LUPA2.txt  LUPA3.txt  MP.txt  Ma Classe.txt  My Class.txt  PC.txt
Export/: Test.txt  Test.xml  Test_config.docx  Test_config.txt  Test_config.xml  Test_config_fill_in_the_blanks.h5p  Test_config_single_choice.h5p  Test_config_solution.txt  Test_solution.txt  blank.json
Instructions/: instruction_manual.md  mode_emploi.md
Module/: tools.py  tools_kivy.py
QCMMaker_Tools/: tools.py
Question Database/: .gitignore
Sortie/: Anglais ATS 2021-960.txt
Templates/: .gitignore  Template_2.docx  template_default.docx
Vieilles_versions/: Convertisseur.py  Convertisseur3.py  Liste des modifications.txt  QCMMakerV2.2.py  QCMMakerV3.4.5.py  QCMMakerV3.4.7.py  QCMMakerV3.6.0.py  QCM_QCM.txt  QCM_Test.txt  QCM_Test_exp.txt  export_Test.txt  questions-Test anglais CI-Défaut pour Test anglais CI-20230412-1224.xml  (+2 more)
(+231 files in other folders)
